minor spacing fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -140,5 +140,6 @@ button:hover {
     flex-direction: column;
     justify-self: center;
     text-align: center;
+    margin-bottom: 20px;
   }
 }
